--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
 		<dependency>
 			<groupId>stsc</groupId>
 			<artifactId>stsc.stocks.yahoo.core</artifactId>
-			<version>0.0.17-PROSEP</version>
+			<version>0.0.18-WEBINTERFACE</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
