--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,14 @@
 	</dependencyManagement>
 
 	<repositories>
-                <repository>
-                        <id>stsc-bom-repository</id>
-                        <url>https://raw.github.com/sidorovis/stsc/stsc.bom/</url>
-                </repository>
+		<repository>
+			<id>maven-central</id>
+			<url>http://repo1.maven.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>stsc-bom-repository</id>
+			<url>https://raw.github.com/sidorovis/stsc/stsc.bom/</url>
+		</repository>
 		<repository>
 			<id>stsc-common-mvn-repo</id>
 			<url>https://raw.github.com/sidorovis/stsc/stsc.common/</url>
@@ -106,7 +110,8 @@
 				<artifactId>site-maven-plugin</artifactId>
 				<version>0.12</version>
 				<configuration>
-					<message>#2 new version ${project.version} deployment for stsc.fundamental.analysis</message>
+					<message>#2 new version ${project.version} deployment for
+						stsc.fundamental.analysis</message>
 					<noJekyll>true</noJekyll>
 					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
 					<branch>refs/heads/stsc.fundamental.analysis</branch>
